Fix footer background color on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 html,
 body {
-  background-color: #eee;
+  /* Need to declare this here b/c recent decks section may expand out of
+     dedicated footer area on mobile clients */
+  background-color: #ddd;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -22,7 +24,6 @@ a:hover {
 
 #header {
   background-color: #444;
-  margin-bottom: 20px;
   padding: 0;
 }
 
@@ -41,18 +42,23 @@ a:hover {
 
 #main {
   /* Height of footer */
-  padding-bottom: 270px;
+  padding: 20px 0 250px 0;
+  background-color: #eee;
 }
 
 #footer {
   width: 100%;
-  height: 270px;
-  position: absolute;
+  height: 250px;
   background-color: #ddd;
+  position: absolute;
   bottom: 0;
   left: 0;
   margin-top: 0;
-  padding-top: 20px;
+  padding: 20px 0 0 0;
+}
+
+#recent_decks {
+  padding-bottom: 20px;
 }
 
 h3 {
